--- a/tests/test1.ipynb
+++ b/tests/test1.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🔄 stdout reconfigure skipped (Jupyter environment)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from usdc_terminal import (load_accounts, token_data, extract_token_contracts, extract_token_decimals,convert_to_usd,\n",
     "                           get_balance,resolve_chain_name,get_token_decimals,CHAIN_MAP,network_func,get_all_balances,\n",
@@ -38,15 +30,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Connected to arbitrum via https://arb-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 323033675\n",
-      "account 1: 0x38979DFdB5d8FD76FAD4E797c4660e20015C6a84\n",
-      "✅ Connected to arbitrum via https://arb-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 323033676\n",
-      "account 2: 0x58a4Cae5e8dDA3a5614972F34951e482a29ef0f0\n"
+      "✅ Connected to arbitrum via https://arb-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 323697820\n",
+      "account 0: 0x38979DFdB5d8FD76FAD4E797c4660e20015C6a84\n"
      ]
     }
    ],
    "source": [
-    "w3_accounts = load_accounts('arbitrum')"
+    "w3_accounts = load_accounts('arbitrum',0)"
    ]
   },
   {
@@ -57,10 +47,8 @@
     {
      "data": {
       "text/plain": [
-       "[{'w3': <web3.main.Web3 at 0x1c4603ba990>,\n",
-       "  'account': <eth_account.signers.local.LocalAccount at 0x1c460685c50>},\n",
-       " {'w3': <web3.main.Web3 at 0x1c460cc1d50>,\n",
-       "  'account': <eth_account.signers.local.LocalAccount at 0x1c460ceb0d0>}]"
+       "[{'w3': <web3.main.Web3 at 0x29fe940aa80>,\n",
+       "  'account': <eth_account.signers.local.LocalAccount at 0x29fe95258b0>}]"
       ]
      },
      "execution_count": 4,
@@ -81,36 +69,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Connected to ethereum via https://eth-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 22199649\n",
-      "account 1: 0x38979DFdB5d8FD76FAD4E797c4660e20015C6a84\n",
-      "✅ Connected to ethereum via https://eth-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 22199649\n",
-      "account 2: 0x58a4Cae5e8dDA3a5614972F34951e482a29ef0f0\n",
-      "✅ Connected to ethereum via https://eth-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 22199649\n",
-      "Balances for account 0x38979DFdB5d8FD76FAD4E797c4660e20015C6a84: {'ethereum': 0.0}\n",
-      "✅ Connected to optimism via https://opt-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 134110159\n",
-      "Balances for account 0x38979DFdB5d8FD76FAD4E797c4660e20015C6a84: {'optimism': 19.0}\n",
+      "✅ Connected to ethereum via https://eth-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 22213468\n",
+      "account 0: 0x38979DFdB5d8FD76FAD4E797c4660e20015C6a84\n",
+      "✅ Connected to ethereum via https://eth-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 22213468\n",
+      "account 1: 0x58a4Cae5e8dDA3a5614972F34951e482a29ef0f0\n",
+      "✅ Connected to ethereum via https://eth-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 22213468\n",
+      "✅ Connected to optimism via https://opt-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 134193601\n",
       "❌ Failed to connect to avalanche via https://avax-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5. Trying next...\n",
-      "✅ Connected to avalanche via https://avalanche-mainnet.infura.io/v3/d8cb9659ebdf487dbbc133d87d7c404c: Block 59731027\n",
-      "Balances for account 0x38979DFdB5d8FD76FAD4E797c4660e20015C6a84: {'avalanche': 0.0}\n",
-      "✅ Connected to arbitrum via https://arb-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 323033694\n",
-      "Balances for account 0x38979DFdB5d8FD76FAD4E797c4660e20015C6a84: {'arbitrum': 1.554761}\n",
-      "✅ Connected to polygon via https://polygon-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 69909302\n",
-      "Balances for account 0x38979DFdB5d8FD76FAD4E797c4660e20015C6a84: {'polygon': 0.0}\n",
-      "✅ Connected to base via https://base-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 28514876\n",
-      "Balances for account 0x38979DFdB5d8FD76FAD4E797c4660e20015C6a84: {'base': 0.0}\n",
-      "✅ Connected to ethereum via https://eth-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 22199650\n",
-      "Balances for account 0x58a4Cae5e8dDA3a5614972F34951e482a29ef0f0: {'ethereum': 0.0}\n",
-      "✅ Connected to optimism via https://opt-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 134110162\n",
-      "Balances for account 0x58a4Cae5e8dDA3a5614972F34951e482a29ef0f0: {'optimism': 0.0}\n",
+      "✅ Connected to avalanche via https://avalanche-mainnet.infura.io/v3/d8cb9659ebdf487dbbc133d87d7c404c: Block 59819495\n",
+      "✅ Connected to arbitrum via https://arb-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 323697847\n",
+      "✅ Connected to polygon via https://polygon-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 69987305\n",
+      "✅ Connected to base via https://base-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 28598319\n",
+      "✅ Connected to ethereum via https://eth-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 22213469\n",
+      "✅ Connected to optimism via https://opt-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 134193605\n",
       "❌ Failed to connect to avalanche via https://avax-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5. Trying next...\n",
-      "✅ Connected to avalanche via https://avalanche-mainnet.infura.io/v3/d8cb9659ebdf487dbbc133d87d7c404c: Block 59731031\n",
-      "Balances for account 0x58a4Cae5e8dDA3a5614972F34951e482a29ef0f0: {'avalanche': 0.0}\n",
-      "✅ Connected to arbitrum via https://arb-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 323033717\n",
-      "Balances for account 0x58a4Cae5e8dDA3a5614972F34951e482a29ef0f0: {'arbitrum': 2.0}\n",
-      "✅ Connected to polygon via https://polygon-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 69909305\n",
-      "Balances for account 0x58a4Cae5e8dDA3a5614972F34951e482a29ef0f0: {'polygon': 0.0}\n",
-      "✅ Connected to base via https://base-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 28514879\n",
-      "Balances for account 0x58a4Cae5e8dDA3a5614972F34951e482a29ef0f0: {'base': 0.0}\n",
+      "✅ Connected to avalanche via https://avalanche-mainnet.infura.io/v3/d8cb9659ebdf487dbbc133d87d7c404c: Block 59819499\n",
+      "✅ Connected to arbitrum via https://arb-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 323697876\n",
+      "✅ Connected to polygon via https://polygon-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 69987308\n",
+      "✅ Connected to base via https://base-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5: Block 28598323\n",
       "{\n",
       "  \"0x38979DFdB5d8FD76FAD4E797c4660e20015C6a84\": {\n",
       "    \"ethereum\": {\n",
@@ -118,7 +94,7 @@
       "      \"native_token\": 0.0\n",
       "    },\n",
       "    \"optimism\": {\n",
-      "      \"usdc\": 19.0,\n",
+      "      \"usdc\": 24.0,\n",
       "      \"native_token\": 0.003123221328731566\n",
       "    },\n",
       "    \"avalanche\": {\n",
@@ -126,15 +102,15 @@
       "      \"native_token\": 0.0\n",
       "    },\n",
       "    \"arbitrum\": {\n",
-      "      \"usdc\": 1.554761,\n",
-      "      \"native_token\": 0.007981819465001476\n",
+      "      \"usdc\": 7.464262,\n",
+      "      \"native_token\": 0.007353929458644933\n",
       "    },\n",
       "    \"polygon\": {\n",
       "      \"usdc\": 0.0,\n",
       "      \"native_token\": 0.0\n",
       "    },\n",
       "    \"base\": {\n",
-      "      \"usdc\": 0.0,\n",
+      "      \"usdc\": 2.0,\n",
       "      \"native_token\": 0.0\n",
       "    }\n",
       "  },\n",
@@ -169,12 +145,238 @@
     }
    ],
    "source": [
-    "BALANCES_DICT, TOKEN_CONTRACTS, TOKEN_DECIMALS = get_usdc_data()"
+    "BALANCES_DICT, TOKEN_CONTRACTS, TOKEN_DECIMALS, account_obj, usdc_price = get_usdc_data()"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'w3': <web3.main.Web3 at 0x29fe97bad50>,\n",
+       " 'account': <eth_account.signers.local.LocalAccount at 0x29fe97bb7a0>}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "account_obj[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.99993"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "usdc_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'0x38979DFdB5d8FD76FAD4E797c4660e20015C6a84': {'ethereum': {'usdc': 0.0,\n",
+       "   'native_token': 0.0},\n",
+       "  'optimism': {'usdc': 24.0, 'native_token': 0.003123221328731566},\n",
+       "  'avalanche': {'usdc': 0.0, 'native_token': 0.0},\n",
+       "  'arbitrum': {'usdc': 7.464262, 'native_token': 0.007353929458644933},\n",
+       "  'polygon': {'usdc': 0.0, 'native_token': 0.0},\n",
+       "  'base': {'usdc': 2.0, 'native_token': 0.0}},\n",
+       " '0x58a4Cae5e8dDA3a5614972F34951e482a29ef0f0': {'ethereum': {'usdc': 0.0,\n",
+       "   'native_token': 0.0},\n",
+       "  'optimism': {'usdc': 0.0, 'native_token': 0.0005},\n",
+       "  'avalanche': {'usdc': 0.0, 'native_token': 0.0},\n",
+       "  'arbitrum': {'usdc': 2.0, 'native_token': 0.001},\n",
+       "  'polygon': {'usdc': 0.0, 'native_token': 0.0},\n",
+       "  'base': {'usdc': 0.0, 'native_token': 0.0}}}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BALANCES_DICT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'0x38979DFdB5d8FD76FAD4E797c4660e20015C6a84': {'ethereum': {'usdc': 0.0,\n",
+       "   'native_token': 0.0},\n",
+       "  'optimism': {'usdc': 24.0, 'native_token': 0.003123221328731566},\n",
+       "  'avalanche': {'usdc': 0.0, 'native_token': 0.0},\n",
+       "  'arbitrum': {'usdc': 7.464262, 'native_token': 0.007353929458644933},\n",
+       "  'polygon': {'usdc': 0.0, 'native_token': 0.0},\n",
+       "  'base': {'usdc': 2.0, 'native_token': 0.0}},\n",
+       " '0x58a4Cae5e8dDA3a5614972F34951e482a29ef0f0': {'ethereum': {'usdc': 0.0,\n",
+       "   'native_token': 0.0},\n",
+       "  'optimism': {'usdc': 0.0, 'native_token': 0.0005},\n",
+       "  'avalanche': {'usdc': 0.0, 'native_token': 0.0},\n",
+       "  'arbitrum': {'usdc': 2.0, 'native_token': 0.001},\n",
+       "  'polygon': {'usdc': 0.0, 'native_token': 0.0},\n",
+       "  'base': {'usdc': 0.0, 'native_token': 0.0}}}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BALANCES_DICT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.99993"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "usdc_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_usd_values(BALANCES_DICT):\n",
+    "\n",
+    "    # Add USD values to each balance entry\n",
+    "    for address, data in BALANCES_DICT.items():\n",
+    "        for network, balance_data in data.items():\n",
+    "            balance_data['usd_balance'] = round(balance_data['usdc'] * usdc_price, 6)\n",
+    "\n",
+    "    # Initialize totals\n",
+    "    total_by_network = {}\n",
+    "    grand_total = 0.0\n",
+    "\n",
+    "    # Aggregate totals\n",
+    "    for address, data in BALANCES_DICT.items():\n",
+    "        for network, balance_data in data.items():\n",
+    "            usd = balance_data.get('usd_balance', 0.0)\n",
+    "            total_by_network[network] = total_by_network.get(network, 0.0) + usd\n",
+    "            grand_total += usd\n",
+    "\n",
+    "    # Round totals for readability\n",
+    "    total_by_network = {k: round(v, 2) for k, v in total_by_network.items()}\n",
+    "    grand_total = round(grand_total, 2)\n",
+    "\n",
+    "    # Store in BALANCES_DICT\n",
+    "    BALANCES_DICT['TOTAL USD VALUE'] = {\n",
+    "        'by_network': total_by_network,\n",
+    "        'total_usd': grand_total\n",
+    "    }\n",
+    "\n",
+    "    return BALANCES_DICT\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'0x38979DFdB5d8FD76FAD4E797c4660e20015C6a84': {'ethereum': {'usdc': 0.0,\n",
+       "   'native_token': 0.0,\n",
+       "   'usd_balance': 0.0},\n",
+       "  'optimism': {'usdc': 24.0,\n",
+       "   'native_token': 0.003123221328731566,\n",
+       "   'usd_balance': 23.997528},\n",
+       "  'avalanche': {'usdc': 0.0, 'native_token': 0.0, 'usd_balance': 0.0},\n",
+       "  'arbitrum': {'usdc': 7.464262,\n",
+       "   'native_token': 0.007353929458644933,\n",
+       "   'usd_balance': 7.463493},\n",
+       "  'polygon': {'usdc': 0.0, 'native_token': 0.0, 'usd_balance': 0.0},\n",
+       "  'base': {'usdc': 2.0, 'native_token': 0.0, 'usd_balance': 1.999794}},\n",
+       " '0x58a4Cae5e8dDA3a5614972F34951e482a29ef0f0': {'ethereum': {'usdc': 0.0,\n",
+       "   'native_token': 0.0,\n",
+       "   'usd_balance': 0.0},\n",
+       "  'optimism': {'usdc': 0.0, 'native_token': 0.0005, 'usd_balance': 0.0},\n",
+       "  'avalanche': {'usdc': 0.0, 'native_token': 0.0, 'usd_balance': 0.0},\n",
+       "  'arbitrum': {'usdc': 2.0, 'native_token': 0.001, 'usd_balance': 1.999794},\n",
+       "  'polygon': {'usdc': 0.0, 'native_token': 0.0, 'usd_balance': 0.0},\n",
+       "  'base': {'usdc': 0.0, 'native_token': 0.0, 'usd_balance': 0.0}},\n",
+       " 'TOTAL USD VALUE': {'by_network': {'ethereum': 0.0,\n",
+       "   'optimism': 24.0,\n",
+       "   'avalanche': 0.0,\n",
+       "   'arbitrum': 9.46,\n",
+       "   'polygon': 0.0,\n",
+       "   'base': 2.0},\n",
+       "  'total_usd': 35.46}}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BALANCES_DICT = calculate_usd_values(BALANCES_DICT,usdc_price)\n",
+    "\n",
+    "BALANCES_DICT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,9 +869,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test_env",
+   "display_name": "usdc_terminal_env",
    "language": "python",
-   "name": "python3"
+   "name": "usdc_terminal_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -681,7 +883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
