preparing test notebook, fixing gas estimation

--- a/tests/test1.ipynb
+++ b/tests/test1.ipynb
@@ -9,20 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'get_largest_balance' from 'ccip_terminal' (E:\\Projects\\ccip_terminal_copy\\ccip_terminal\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mccip_terminal\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (network_func, get_ccip_fee_estimate, approve_token_if_needed,\n\u001b[32m      2\u001b[39m                            send_ccip_transfer, check_ccip_message_status, get_usdc_data,\n\u001b[32m      3\u001b[39m                            ROUTER_MAP,get_largest_balance)\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjson\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mweb3\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Web3\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'get_largest_balance' from 'ccip_terminal' (E:\\Projects\\ccip_terminal_copy\\ccip_terminal\\__init__.py)"
+     ]
+    }
+   ],
    "source": [
-    "network = 'arbitrum' # Can set to variety of networks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ccip_terminal import (network_func, get_ccip_fee_estimate, send_ccip_transfer, check_ccip_message_status, get_usdc_data)\n",
+    "from ccip_terminal import (network_func, get_ccip_fee_estimate, approve_token_if_needed,\n",
+    "                           send_ccip_transfer, check_ccip_message_status, get_usdc_data,\n",
+    "                           ROUTER_MAP,get_largest_balance)\n",
+    "import json\n",
     "from web3 import Web3\n",
     "import os\n",
     "from dotenv import load_dotenv"
@@ -30,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -39,9 +45,18 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -50,19 +65,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "PRIVATE_KEY = os.getenv('PRIVATE_KEY')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
+    "network = 'arbitrum' # Can set to variety of networks\n",
+    "\n",
     "w3 = network_func(network)\n",
     "account = w3.eth.account.from_key(PRIVATE_KEY)\n",
     "account_obj={\"account\": account, \"w3\": w3}"
@@ -77,37 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "to_address = '0x2083b0413869f7b5b9e0eA27d20CB6dD3535f525'\n",
-    "dest_chain='base'\n",
-    "amount=1\n",
-    "source_chain=network"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "❌ Failed to connect to avalanche via https://avax-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5. Trying next...\n",
-      "❌ Failed to connect to avalanche via https://avax-mainnet.g.alchemy.com/v2/6AUlaGmWe505S7gRPZXVh4YEFgJdYHy5. Trying next...\n"
-     ]
-    }
-   ],
-   "source": [
-    "BALANCES_DICT, TOKEN_CONTRACTS, TOKEN_DECIMALS, _, usdc_price = get_usdc_data(account_obj=account_obj)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -117,20 +124,20 @@
       "{\n",
       "  \"0x38979DFdB5d8FD76FAD4E797c4660e20015C6a84\": {\n",
       "    \"ethereum\": {\n",
-      "      \"usdc\": 0.0,\n",
-      "      \"native_token\": 0.0\n",
+      "      \"usdc\": 0.00979,\n",
+      "      \"native_token\": 4.132747937321e-06\n",
       "    },\n",
       "    \"optimism\": {\n",
-      "      \"usdc\": 22.0,\n",
-      "      \"native_token\": 0.001797209599623622\n",
+      "      \"usdc\": 1.0,\n",
+      "      \"native_token\": 0.001397223622087085\n",
       "    },\n",
       "    \"avalanche\": {\n",
       "      \"usdc\": 1.0,\n",
       "      \"native_token\": 0.0\n",
       "    },\n",
       "    \"arbitrum\": {\n",
-      "      \"usdc\": 1.464262,\n",
-      "      \"native_token\": 0.010627123766159824\n",
+      "      \"usdc\": 0.454262,\n",
+      "      \"native_token\": 0.002657681112361215\n",
       "    },\n",
       "    \"polygon\": {\n",
       "      \"usdc\": 1.0,\n",
@@ -143,18 +150,48 @@
       "  }\n",
       "}\n"
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
+    "BALANCES_DICT, TOKEN_CONTRACTS, TOKEN_DECIMALS, _, usdc_price = get_usdc_data(account_obj=account_obj)\n",
     "# USDC Balance for Account Across Supported Networks\n",
-    "import json\n",
     "\n",
     "print(json.dumps(BALANCES_DICT, indent=2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "largest_balance_dict = get_largest_balance(BALANCES_DICT, account_obj=account_obj,min_gas_threshold=0.003)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_address = '0x2083b0413869f7b5b9e0eA27d20CB6dD3535f525'\n",
+    "dest_chain='base'\n",
+    "amount=0.4\n",
+    "source_chain=network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +205,7 @@
        " 'base': '0x833589fCD6eDb6E08f4c7C32D4f71b54bdA02913'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,27 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.999884"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "usdc_price"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -212,8 +229,9 @@
    ],
    "source": [
     "source_chain_state = BALANCES_DICT[account.address][source_chain]\n",
+    "source_chain_state['usdc']\n",
     "usdc_balance = source_chain_state['usdc']\n",
-    "sufficient_token = amount < usdc_balance\n",
+    "sufficient_token = amount <= usdc_balance\n",
     "\n",
     "if not sufficient_token:\n",
     "    print(f'Token balance below desired send amount - Account: {usdc_balance}, Desired amount: {amount}')\n",
@@ -223,16 +241,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "native gas balance: 0.010627123766159824\n",
-      "gas estimate: 0.001981512707782155\n",
-      "Enough gas to swap?: yes\n"
+      "Getting token data\n",
+      "native gas balance: 0.002657681112361215\n",
+      "gas estimate: 0.002210126506080179\n",
+      "Enough gas for transfer?: yes\n"
      ]
     }
    ],
@@ -244,8 +263,7 @@
     "    dest_chain=dest_chain,\n",
     "    amount=amount,\n",
     "    source_chain=source_chain,\n",
-    "    w3=w3,\n",
-    "    account=account\n",
+    "    account_obj=account_obj\n",
     ")\n",
     "native_balance = w3.eth.get_balance(account.address)\n",
     "total_estimate = estimate[\"total_estimate\"]\n",
@@ -260,23 +278,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'total_estimate': 1981512707782155,\n",
-       " 'native_gas_fee': 1803600000000000,\n",
-       " 'ccip_fee': 177912707782155,\n",
-       " 'gas_limit': 360000,\n",
+       "{'total_estimate': 2210126506080179,\n",
+       " 'native_gas_fee': 2034054990000000,\n",
+       " 'ccip_fee': 176071516080179,\n",
+       " 'gas_limit': 405999,\n",
        " 'max_fee_per_gas': 5010000000,\n",
        " 'priority_fee': 5000000000,\n",
        " 'base_gas_price': 10000000,\n",
        " 'currency': 42161}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,18 +307,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Approves Router to Spend Our Token If Necessary\n",
+    "\n",
+    "approve_token_if_needed(TOKEN_CONTRACTS[source_chain], \n",
+    "                            ROUTER_MAP[source_chain], \n",
+    "                            account_obj, \n",
+    "                            threshold=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-08 18:38:22,687 - INFO - CCIP messageId (pre-send): 46e0dd8ccd971a48ccf2ea84cf297f779b646c7233cc57b661a2009633aa02ac\n"
+      "2025-04-09 17:53:47,942 - INFO - CCIP messageId (pre-send): 6c9ef508f8e06185652d2146e2478fe03b2b000205e79c5e5ba7b60a4fad771d\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "account.address: 0x38979DFdB5d8FD76FAD4E797c4660e20015C6a84\n"
      ]
     }
    ],
    "source": [
+    "receipt = None\n",
+    "\n",
     "if can_transfer and sufficient_token:\n",
     "    receipt, links, success, message_id = send_ccip_transfer(\n",
     "        to_address=to_address,\n",
@@ -319,54 +371,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'source_url': 'https://arbitrum.blockscout.com/tx/0x4ae4aa59f7ea7b1206abea437c155f1f3d1e8ab9e9f6fb6a1541c8320239585d',\n",
-       " 'ccip_url': 'https://ccip.chain.link/#/side-drawer/msg/0x46e0dd8ccd971a48ccf2ea84cf297f779b646c7233cc57b661a2009633aa02ac'}"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "links"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'46e0dd8ccd971a48ccf2ea84cf297f779b646c7233cc57b661a2009633aa02ac'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "message_id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Tx Links:{'source_url': 'https://arbitrum.blockscout.com/tx/0xe33a475176163b74c733b8e3ec5cf902527a5a66661a98240d545a64ecbc6bde', 'ccip_url': 'https://ccip.chain.link/#/side-drawer/msg/0x6c9ef508f8e06185652d2146e2478fe03b2b000205e79c5e5ba7b60a4fad771d'}\n",
+      "CCIP MessageID: 6c9ef508f8e06185652d2146e2478fe03b2b000205e79c5e5ba7b60a4fad771d\n",
       "Attempt 1/15 – retrying in 120s...\n",
       "Attempt 2/15 – retrying in 120s...\n",
       "Attempt 3/15 – retrying in 120s...\n",
@@ -379,25 +392,19 @@
       "Attempt 10/15 – retrying in 120s...\n",
       "Attempt 11/15 – retrying in 120s...\n",
       "Attempt 12/15 – retrying in 120s...\n",
-      "Found status for message 46e0dd8ccd971a48ccf2ea84cf297f779b646c7233cc57b661a2009633aa02ac on 0x7d38c6363d5e4dfd500a691bc34878b383f58d93: SUCCESS\n"
+      "Found status for message 6c9ef508f8e06185652d2146e2478fe03b2b000205e79c5e5ba7b60a4fad771d on 0x7d38c6363d5e4dfd500a691bc34878b383f58d93: SUCCESS\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('SUCCESS', '0x7d38c6363d5e4dfd500a691bc34878b383f58d93')"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Here we query Etherscan for transfer status, can take up to 25 minutes.\n",
-    "# Wait flag periodically calls the API for status\n",
-    "\n",
-    "check_ccip_message_status(message_id, dest_chain, wait=True)"
+    "if receipt and receipt.status == 1:\n",
+    "    print(f'Tx Links:{links}')\n",
+    "    print(f'CCIP MessageID: {message_id}')\n",
+    "    # Here we query Etherscan for transfer status, can take up to 25 minutes.\n",
+    "    # Wait flag periodically calls the API for status\n",
+    "    check_ccip_message_status(message_id, dest_chain, wait=True)\n",
+    "else:\n",
+    "    print(F'No Tx Detected or Tx Failed')"
    ]
   },
   {
