testing gas estimation

--- a/tests/test1.ipynb
+++ b/tests/test1.ipynb
@@ -9,18 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "ename": "ImportError",
-     "evalue": "cannot import name 'get_largest_balance' from 'ccip_terminal' (E:\\Projects\\ccip_terminal_copy\\ccip_terminal\\__init__.py)",
+     "evalue": "cannot import name 'get_largest_balance' from 'ccip_terminal' (E:\\Projects\\ccip_terminal\\ccip_terminal\\__init__.py)",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mccip_terminal\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (network_func, get_ccip_fee_estimate, approve_token_if_needed,\n\u001b[32m      2\u001b[39m                            send_ccip_transfer, check_ccip_message_status, get_usdc_data,\n\u001b[32m      3\u001b[39m                            ROUTER_MAP,get_largest_balance)\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjson\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mweb3\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Web3\n",
-      "\u001b[31mImportError\u001b[39m: cannot import name 'get_largest_balance' from 'ccip_terminal' (E:\\Projects\\ccip_terminal_copy\\ccip_terminal\\__init__.py)"
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mccip_terminal\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (network_func, get_ccip_fee_estimate, approve_token_if_needed,\n\u001b[32m      2\u001b[39m                            send_ccip_transfer, check_ccip_message_status, get_usdc_data,\n\u001b[32m      3\u001b[39m                            ROUTER_MAP,get_largest_balance)\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjson\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mweb3\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Web3\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'get_largest_balance' from 'ccip_terminal' (E:\\Projects\\ccip_terminal\\ccip_terminal\\__init__.py)"
      ]
     }
    ],
